<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcomeLabel"
        style="@style/AppTextAppearance.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_landing_title_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />


    <Button
        android:id="@+id/weatherButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin_long"
        android:text="@string/fragment_landing_weather_btn"
        app:layout_constraintEnd_toEndOf="@+id/welcomeLabel"
        app:layout_constraintStart_toStartOf="@+id/welcomeLabel"
        app:layout_constraintTop_toBottomOf="@+id/welcomeLabel" />

    <Button
        android:id="@+id/forecastButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin_double"
        android:text="@string/fragment_landing_forecast_btn"
        app:layout_constraintEnd_toEndOf="@+id/weatherButton"
        app:layout_constraintStart_toStartOf="@+id/weatherButton"
        app:layout_constraintTop_toBottomOf="@+id/weatherButton" />

</androidx.constraintlayout.widget.ConstraintLayout>